--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
     <div>
       <h2> What we excel at</h2>
     </div>
-    <div class="slider-button swiper2">
-      <div><button class="secondary-button"> Web-design <img src="./crown-12.svg"></button></div>
-      <div><button class="secondary-button"> App-design <img src="./crown-12.svg"></button></div>
-      <div><button class="secondary-button"> Prototipuri interactive<img src="./crown-12.svg"></button></div>
-      <div><button class="secondary-button"> Optimizare rata de conversie <img src="./crown-12.svg"></button></div>
-      <div><button class="secondary-button"> Editare poze</button></div>
-      <div><button class="secondary-button"> Postari Social Media </button></div>
-      <div><button class="secondary-button"> Materiale printate</button></div>
-      <div><button class="secondary-button"> Bannere</button></div>
-      <div><button class="secondary-button"> Design de ambalaj </button></div>
-      <div><button class="secondary-button"> Reclame Facebook Ads</button></div>
+    <div class="slider-button">
+      <button class="secondary-button"> Web-design <img src="./crown-12.svg"></button>
+      <button class="secondary-button"> App-design <img src="./crown-12.svg"></button>
+      <button class="secondary-button"> Prototipuri interactive<img src="./crown-12.svg"></button>
+      <button class="secondary-button"> Optimizare rata de conversie <img src="./crown-12.svg"></button>
+      <button class="secondary-button"> Editare poze</button>
+      <button class="secondary-button"> Postari Social Media </button>
+      <button class="secondary-button"> Materiale printate</button>
+      <button class="secondary-button"> Bannere</button>
+      <button class="secondary-button"> Design de ambalaj </button>
+      <button class="secondary-button"> Reclame Facebook Ads</button>
     </div>
   
-    <div class="swiper swiper1">
+    <div class="swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
@@ -99,7 +99,7 @@
 
 
   <!--Freelancer vs design agency-->
-  <!-- <div class="comparison-bg">
+  <div class="comparison-bg">
     <div>
       <h2>Multe avantaje fata <br>de un freelancer / angajat</h2>
     </div>
@@ -152,11 +152,12 @@
     <img id="pink-left" src="./public/images/pink-sphere.png">
     <img id="pink-right" src="./public/images/pink-sphere.png">
     <img id="small-blue" src="./public/images/small-blue.png">
-  </div> -->
+  </div>
   <div class="testi-section wrapper">
     <h2>Testimonials</h2>
-    <div class="allcards">
-      <div class="testi-cards">
+    <div class="swiper2">
+    <div class="swiper-wrapper allcards">
+      <div class=" swiper-slide testi-cards swiper-slide2">
         <div class="testi-left-content">
           <div class="stars">
             <img src="./public/images/star-1.svg">
@@ -193,7 +194,7 @@
 
 
       </div>
-      <div class="testi-cards">
+      <div class="swiper-slide swiper-slide2 testi-cards">
         <div class="testi-left-content">
           <div class="stars">
             <img src="./public/images/star-1.svg">
@@ -230,7 +231,7 @@
 
 
       </div>
-      <div class="testi-cards">
+      <div class="swiper-slide swiper-slide2 testi-cards">
         <div class="testi-left-content">
           <div class="stars">
             <img src="./public/images/star-1.svg">
@@ -267,11 +268,66 @@
 
 
       </div>
+      <div class=" swiper-slide swiper-slide2 testi-cards">
+        <div class="testi-left-content">
+          <div class="stars">
+            <img src="./public/images/star-1.svg">
+            <img src="./public/images/star-1.svg">
+            <img src="./public/images/star-1.svg">
+            <img src="./public/images/star-1.svg">
+            <img src="./public/images/star-1.svg">
+          </div>
+          <div>
+            <p>
+              Un curs care acoperá nu doar notiunile principale despre marketing online, dar si termeni de baza si
+              indicatori cheie pe care trebuie sã îi urmäresti constant in evolutia
+              businessului. <br><br>
 
+              Cursul acesta oferã o adevãratà valoare deoarece ai ocazia sã înveti pas cu pas de la un antreprenor de
+              succes modul în care îsi promoveazã produsele pe TikTok / Facebook
+              Ads si actiunile pe care le face pentru că reclamele lui sã aibã succes. Felicitãri!
+            </p>
+          </div>
+
+          <div class="salutation">
+            <p><span id="highlight" style="font-size: 24px; font-weight: 700 ;">Cristian Grozea</span> <br> CEO &
+              Co-founder Beefast</p>
+
+          </div>
+
+        </div>
+        <div class="testi-right-content">
+          <div>
+            <img src="./public/images/grozea-1.png">
+          </div>
+
+        </div>
+
+
+      </div>
+      <!-- If we need navigation buttons -->
+     
     </div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-pagination"></div>
+
+  </div>
  
 
   </div>
+  <!-- <div class="pricing-section wrapper">
+    <div class="horizontal-text">
+      <div id="headline">
+        <h2>Abonamente de 
+          design nelimitate</h2>
+      </div>
+      <div class="vertical-breakline"></div>
+      <div id="paragraph-right">
+        <p>Ne dai de lucru, ne apucam de treaba, livram, apoi trecem la urmatorea sarcina. Adica nu iti putem face simultan atat un web design, cat si o aplicatie mobila, dar si zeci de bannere. Ti le facem pe toate, dar rand pe rand :).</p>
+      </div>
+    </div>
+  </div> -->
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
