--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="right-content">
-        <img src="../img-7622.png">
+        <img src="./img-7622.png">
       </div>
     </div>
   </div>
