--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="right-content">
-        <img src="./img-7622.png">
+        <img src="../img-7622.png">
       </div>
     </div>
   </div>
@@ -689,6 +689,7 @@
         </div>
 
       </div>
+    <button class="rm">Expand</button>
     </div>
 
 
