--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
     <div>
       <h2>Multe avantaje fata <br>de un freelancer / angajat</h2>
     </div>
+    <div class="toggleButton">
+      <button class="tgOne active-tg">Freelancer</button>
+      <button class="tgOne tgTwo">Agency</button>
+    </div>
     <div class="compcontent wrapper">
       <div class="compBox">
         <div class="freelancerBox">
@@ -327,8 +331,12 @@
         <div id="paragraph-right">
           <p>Ne dai de lucru, ne apucam de treaba, livram, apoi trecem la urmatorea sarcina. Adica nu iti putem face
             simultan atat un web design, cat si o aplicatie mobila, dar si zeci de bannere. Ti le facem pe toate, dar
-            rand pe rand :).</p>
+            rand pe rand.</p>
         </div>
+      </div>
+      <div class="toggleButton">
+        <button class="tgOne active-tg">Standard</button>
+        <button class="tgOne tgTwo">Premium <img src="./crown-12.svg " width="23px"></button>
       </div>
 
       <!-- pricing table starts here -->
@@ -518,6 +526,11 @@
       </div>
     </div>
   </div>
+
+
+
+
+
   <div class="faq-section wrapper">
     <h2>FAQ Section</h2>
     <div class="faq-column">
@@ -689,12 +702,55 @@
         </div>
 
       </div>
-    <button class="rm">Expand</button>
+      <button class="rm">Expand</button>
     </div>
-
-
-
   </div>
+
+
+
+  <div class="aboutus-section wrapper">
+    <div class="aboutus-content">
+      <div class="chris">
+        <img src="./public/images/Chris.png" width="400rem">
+      </div>
+      <div class="aboutus-right">
+        <div id="instructor">
+          <p>Instructor de design si antreprenor</p>
+          <h1><span id="highlight">CHRISTIAN </span><br> DORU BARIN</h1>
+        </div>
+        <div id="description">
+          <p>Instructor Photoshop certificat de Adobe. Peste 
+            250.000 de studenti pe Udemy $i 40.000 de recenzii. 
+            Fondatorul Ohvăz si autorul cärtii "Un Milion din Photoshop"</p>
+        </div>
+        <div ic="designation">
+          <p><span id="highlight" style="font-weight: 900;">ADOBE CERTIFIED INSTRUCTOR</span></p>
+          <p><span id="highlight" style="font-weight: 900;"> FONDATOR, OHVAZ.RO</span></p>
+          <p><span id="highlight"style="font-weight: 900;">EX-FOUNDER THEME JUNKY</span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-all wrapper">
+    <div class="footer-content">
+      <p>Founder of Ohvaz, Adobe Certified Instructor and Adobe Certified Expert in Photoshop, top instructor on Udemy, former successful freelancer on 99designs, founder of Theme Junky – Android application design company. Author of the book One Million from Photoshop. Specialized in UI design and graphic design.</p>
+    </div>
+    <div class="footer-legal">
+      <img src="./public/images/paytment.png">
+      <img id=legalimg src="./public/images/Lgl.png">
+      <p> All rights reserved • Expertphotoshop.ro 2024 </p>
+    </div>
+    <div class="footer-terms">
+      <p>Terms & Conditions</p>
+      <p>Privacy policy</p>
+      <p>Payments method</p>
+      <p>Refund Policy</p>
+      <p>Contact us</p>
+    </div>
+  </div>
+</div>
+
 
 
 
