--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <div>
       <h2>Multe avantaje fata <br>de un freelancer / angajat</h2>
     </div>
-    <div class="toggleButton">
+    <div class="tglwrap"><div class="toggleButton">
       <button class="tgOne active-tg">Freelancer</button>
       <button class="tgOne tgTwo">Agency</button>
-    </div>
+    </div></div>
     <div class="compcontent wrapper">
       <div class="compBox">
         <div class="freelancerBox">
