--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
     <div>
       <h2>Multe avantaje fata <br>de un freelancer / angajat</h2>
     </div>
-    <div class="tglwrap"><div class="toggleButton">
-      <button class="tgOne active-tg">Freelancer</button>
-      <button class="tgOne tgTwo">Agency</button>
+    <div class="tglwrap">
+      <div class="toggleButton">
+      <button class="left active-tg">Freelancer</button>
+      <button class="right">Agency</button>
     </div></div>
     <div class="compcontent wrapper">
       <div class="compBox">
@@ -335,8 +336,8 @@
         </div>
       </div>
       <div class="toggleButton">
-        <button class="tgOne active-tg">Standard</button>
-        <button class="tgOne tgTwo">Premium <img src="./crown-12.svg " width="23px"></button>
+        <button class="left active-tg">Standard</button>
+        <button class="right">Premium <img src="./crown-12.svg " width="23px"></button>
       </div>
 
       <!-- pricing table starts here -->
